# TraceDSA

./: .gitignore  Main.cpp  Makefile  README.md  TODO.md  TUI_InterTest.py  makefile.inter  makefile.macos  makefile.windows  pyproject.toml
.github/workflows/: release.yml
ArrayList/: ArrayList.cpp  ArrayList.h
BST/: BST.cpp  BST.h  BST_interactive.cpp
LinkedList/: DoublyLinkedList.cpp  DoublyLinkedList.h  DoublyLinkedList_interactive.cpp  LinkedList.cpp  LinkedList.h  LinkedList_interactive.cpp
PriorityQueue/: Heap.cpp  Heap.h  Heap_interactive.cpp
Queue/: Circular Queue.cpp  Circular Queue.h  CircularQueue.cpp  CircularQueue.h  CircularQueue_interactive.cpp  Queue as LinkedList.cpp  Queue as array.cpp  Queue.cpp  Queue.h  QueueAsLinkedList.cpp  QueueAsLinkedList.h  QueueAsLinkedList_interactive.cpp  Queue_interactive.cpp
Stack/: Stack as array.cpp  Stack as linkedList.cpp  Stack.cpp  Stack.h  StackAsLinkedList.cpp  StackAsLinkedList.h  StackAsLinkedList_interactive.cpp  stack_interactive.cpp
TUI/: TUI_InterTest.py  bridge.py  main.py  test_all_interactive.py
TUI/screens/: confirm_dialog.py  info_screen.py  menu.py  splash.py  trace.py  trace_screen.py
TUI/widgets/: ascii_array.py  ascii_heap.py  ascii_tree.py  ops_log.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  ROADMAP.md
tracedsa/: __main__.py  bridge.py
tracedsa/screens/: confirm_dialog.py  help_screen.py  menu.py  trace_screen.py
tracedsa/widgets/: ascii_heap.py  ops_log.py
