[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracedsa"
version = "1.0.2"
description = "Visualize Data Structures in real time — Python TUI + C++ backend"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["textual>=0.80.0"]

[project.urls]
Homepage = "https://github.com/HA2077/TraceDSA"

[project.scripts]
tdsa = "tracedsa.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["tracedsa"]

[tool.hatch.build.targets.wheel.force-include]
"tracedsa/bins" = "tracedsa/bins"
